---
source: bin/tests/main.rs
expression: "& out"
---
[W16] Warning: Found lib.zipAttrsWith
   ╭─[data/faster_zipattrswith.nix:3:7]
   │
 3 │   _ = lib.zipAttrsWith (name: values: values) [{ a = 1; } { a = 2; b = 3; }];
   ·       ────────┬───────  
   ·               ╰───────── Prefer builtins.zipAttrsWith over lib.zipAttrsWith
───╯
[W16] Warning: Found lib.zipAttrsWith
   ╭─[data/faster_zipattrswith.nix:6:7]
   │
 6 │   _ = nixpkgs.lib.zipAttrsWith (name: values: values) [{ a = 1; } { a = 2; b = 3; }];
   ·       ────────────┬───────────  
   ·                   ╰───────────── Prefer builtins.zipAttrsWith over nixpkgs.lib.zipAttrsWith
───╯
